Create basic Etch-a-Sketch Layout

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 <body>
     <h1 class="page-header">ETCH-A-SKETCH</h1>
 
+    <div class="button-container">
+        <button id="resolution">Set Resolution</button>
+    </div>
+
+    <div id="container"></div>
 
 </body>
 
